@@ -14,4 +14,6 @@ run_build( 'install' );
 check_tree( 't/test_install/remapped',
             { 'lib/perl/MyBar.pm' => {},
               'bin/program'       => { executable => 1 },
+              'lib/perl/MyPod.pm' => {},
+              'man/MyPod.3pm'     => {},
               } );
