@@ -1,0 +1,15 @@
+package MyPod;
+
+use strict;
+
+=head1 NAME
+
+MyPod - some pod to see manpages
+
+=head1 SYNOPSIS
+
+No real code: just demonstrate manpage generation
+
+=cut
+
+1;
